# squeeql

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-publish.yml  test.yml
squeeql/: migrator.py  utils.py
squeeql/tests/: test_migrator.py  test_utils.py
