[project]
name = "squeeql"
version = "2025.8.2"
requires-python = ">=3.10"
description = "Simple utilities for using sqlite3."
readme = "README.md"
license-files = ["COPYING", "COPYING.LGPL"]

[project.optional-dependencies]
test = [
  "black>=24.10.0",
  "parameterized>=0.9.0",
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0,<6.0",
]

[project.urls]
Repository = "https://github.com/squeeql-dev/squeeql"
Issues = "https://github.com/squeeql-dev/squeeql/issues"

[tool.pytest.ini_options]
addopts = "--cov=squeeql --cov-report json --cov-report term"

[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"
